# pyramid-scheme-simulator

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  Makefile  README.md  clang_check  failed_run_2018-06-28.txt  new_attempt.diff
cmake/: all_targets_functions.cmake  build_crossguid.cmake  build_gtest.cmake  build_soci.cmake  build_spdlog_dep.cmake  default_build_type.cmake  fetch_and_build_sdl_2.cmake  get_sdl_2.0.7.cmake  signal_handler_option.cmake  target_require_cxx11.cmake  warnings.cmake
doc/: Graph Layout Notes.fodt
include/: Actors.hpp  BoundedOption.hpp  CapitalHolder.hpp  CapitalHolderClassDecls.hpp  ChanceContributor.hpp  Config.hpp  Defaults.hpp  Global.hpp  Graph.hpp  GraphRecordProcessor.hpp  GraphRecords.hpp  HasTime.hpp  LoggingBackend.hpp  NamespaceDefines.hpp  Node.hpp  ParameterImplementations.hpp  PopulationGraph.hpp  RDType.hpp  Sales.hpp  SalesRecords.hpp  SalesResult.hpp  SalesSideEffects.hpp  Signals.hpp  Simulation.hpp  Tick.hpp  TransactionObjects.hpp  TransactionRecords.hpp  Types.hpp  Unique.hpp  Util.hpp
include/Util/: AssertWithMessage.hpp  AtomicDeque.hpp  Either.hpp  GeneralExceptions.hpp  Lockable.hpp  Monoid.hpp  NewExceptionType.hpp  PrettyPrintUniqueable.hpp  PrettyPrintable.hpp  Strcat.hpp  StringifyMacro.hpp  TransformationIterator.hpp  Unique.hpp  Util.hpp
include/ai/: EagerActors.hpp
include/gl/: GLBackend.hpp  GLContext.hpp  GLMatrix.hpp  GLResourceHandle.hpp  GLUtil.hpp  GLWindow.hpp  GraphLayout.hpp  ImageLoader.hpp  MainRenderer.hpp  MatrixState.hpp  NodeRenderer.hpp  NodeVAO.hpp  Resources.hpp  ShaderDefines.hpp  ShaderProgramHandle.hpp  TextureHandle.hpp  VAOHandle.hpp
include/sql/: Strings.hpp
mk/: list_rule.txt
src/: Actors.cpp  BoundedOption.cpp  CMakeLists.txt  CapitalHolder.cpp  ChanceContributor.cpp  Config.cpp  Defaults.cpp  Graph.cpp  GraphRecordProcessor.cpp  LoggingBackend.cpp  PopulationGraph.cpp  PrettyPrintUniqueable.cpp  RestockHandler.cpp  RestockSaleHandler.cpp  Sale.cpp  Sales.cpp  SalesChecks.cpp  SalesRecords.cpp  SalesResult.cpp  SalesSideEffects.cpp  Signals.cpp  Simulation.cpp  TransactionObjects.cpp  TransactionRecords.cpp  Transactions.cpp  Unique.cpp  Util.cpp  Util_StringTrim.cpp  main.cpp
src/exe/: CMakeLists.txt  main.cpp
src/gl/: CMakeLists.txt  DataClasses.cpp  GLBackend.cpp  GLContext.cpp  GLMatrix.cpp  GLUtil.cpp  GLWindow.cpp  Layout.cpp  MainRenderer.cpp  MatrixState.cpp  NodeRenderer.cpp  Resources.cpp  ShaderHandle.cpp  ShaderProgramHandle.cpp  Shaders.cpp  TextureHandle.cpp  VAOHandle.cpp  demo.cpp  test.cpp
src/gl/demo/: demo.cpp
src/gl/include/: GraphLayout.hpp
src/gl/src/: DataClasses.cpp  GraphLayout.cpp  Layout.cpp
src/sql/: CMakeLists.txt  Strings.cpp
test/: CMakeLists.txt  GraphTests.cpp  RestockTests.cpp
test/include/: BasicGraphSettings.hpp  BasicGraphSetup.hpp  TestConfig.hpp  TestUtil.hpp
test/include/mocks/: EagerActors.hpp  MockPopulationGraph.hpp  MockTransactionObjects.hpp  TestPopulationGraph.hpp
test/mocks/: EagerActors.hpp
test/src/: BasicGraphTests.cpp  ConversionHandlerTests.cpp  GenGraphTests.cpp  GraphTests.cpp  MapCollectionTests.cpp  MiscTests.cpp  SampleFromTests.cpp  TestConfig.cpp  UndirectedEdgeTests.cpp  UtilTests.cpp
test/src/gl/: CMakeLists.txt  GLDemo.cpp  TestGraphLayout.cpp
